  - optimized performance of tariffs list (alec)
  - fixed counting of assignments in tariffs list and info (alec)
  - lmsd/hostfile: added 'share_netdev_pubip' option (alec)
  - optimized CustomerStats() and NodeStats() (alec)
  - in customer data added field for date of consent for data processing (alec)
  - lmsd/hostfile: added 'skip_host_ips' option (alec)

version 1.11.3 Quetesh (2008-03-26):

  - fixed 'suspended' filter on customers list (alec)
  - added option phpui.printer_window which enables onload="window.print()"
    for html printouts, allowed values: 'invoice', 'receipt', 'report' (alec)
  - fixed problem with one before last address name in chooseip page (alec)
  - polish documentation converted to utf8 (alec)
  - added customer ID in footer of heldesk notifications with enabled option
    phpui.helpdesk_customerinfo (alec)
  - in quicksearch searching ID columns by '=' not LIKE operator (alec)
  - added int2txt() SQL function designed for postgresql 8.3 compatybility, it
    needs int-to-text type casting when using LIKE operator with numeric 
    columns (alec)
  - receiptadd: we always show last 10 REALLY not accounted invoices (chilan)
  - invoicenew: we choose last invoice number according to selected month (chilan)
  - we can set incorrect SSN and TEN for customers if we wish it (chilan)
  - hosting: menu Accounts renamed to Hosting (alec)
  - hosting: domain for account is required now (alec)
  - hosting: added possibility to create multi-destination aliases (alec) 
  - hosting: on Domains List added assigned accounts number (alec)
  - hosting: improved interface, added info, delete links (alec)
  - hosting: added domain/account/alias info pages (alec)
  - hosting: mail forwarding to external accounts (alec)
  - hosting: added accounts descriptions (alec)
  - hosting: account's password change moved to separate module (alec)
  - hosting: define no quota limit as NULL in database (alec) 
  - tariffs: added hosting limits definitions (alec)