@@ -1,0 +1,7 @@
+<!--// $Id$ //-->
+{box title="Personal data processing agreement"}
+<table width="100%" cellpadding="3" class="light">
+	<tr><td width="100%">{$_config.userpanel.data_consent_text|replace:"\n":"<br />"}</td></tr>
+	<tr><td width="100%" align="right"><a href="?m=info&consent=1">{t}Confirm{/t}</a> {img src="edit.gif" alt=""}</td></tr>
+</table>
+{/box}
