@@ -7,12 +7,22 @@
 			{include file="module:userinfobox.html"}
 		</td>
 	</tr>
+	{if $_config.userpanel.data_consent_text && !$userinfo.consentdate}
+	<tr>
+		<td valign="top" width="100%">
+		{include file="module:consentbox.html"}
+		</td>
+	</tr>
+	{/if}
 {else}
 	<tr>
 		<td valign="top" width="50%">
 			{include file="module:userinfobox.html"}
 		</td>
 		<td valign="top" width="50%">
+			{if $_config.userpanel.data_consent_text && !$userinfo.consentdate}
+			{include file="module:consentbox.html"}<br />
+			{/if}
 			{include file="module:usernodesbox.html"}
 		</td>
 	</tr>
